...
                    app:startIconDrawable="@drawable/ic_email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textSignin"
                    app:layout_constraintVertical_chainStyle="packed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietUsername"
                        style="@style/InputStyle"
                        android:imeOptions="actionNext"
                        android:maxLength="50"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    style="@style/OutlinedBoxInputLayoutStyle"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:hint="@string/hint_password"
                    app:startIconDrawable="@drawable/ic_password"
                    app:layout_constraintBottom_toTopOf="@+id/tvForgotPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilUsername"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:passwordToggleDrawable="@drawable/password_toggle_selector"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietPassword"
                        style="@style/InputStyle"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
...
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_dimen_16sp"
                    android:layout_marginTop="@dimen/dimen_30dp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    style="@style/RegularTextStyle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvCreateNewAccount"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ibtnFacebook"
                    app:layout_constraintVertical_bias="0.0"
                    app:layout_constraintVertical_chainStyle="packed" />
...
