...
    <string name="empty_mobile_number">"Enter mobile number"</string>
    <string name="mobile_number_length">"Enter 10 digit mobile number"</string>
    <string name="valid_email">Please enter email.</string>
    <string name="enter_valid_email">Please enter valid email.</string>
    <string name="empty_email">Enter email</string>
    <string name="valid_password">Enter valid password</string>
    <string name="password_not_same">New and Confirm password should same</string>
    <string name="password_policy">Password should contain min 8 character with 1 Alphabet and 1 Special character.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    //user input errors signup
...
    <string name="alert_enter_zip_code">Please enter zip code.</string>
    <string name="alert_invalid_zip_code_character">Zip Code should contain number or characters.</string>
    <string name="alert_min_zip_code_length">Zip Code must contain 5 to 10 characters.</string>
    <string name="alert_msg_password_and_confirm_password_not_same">Password and confirm password must be same.</string>
    <string name="alert_accept_tnc_and_privacy">To create an account, please agree the terms &amp; conditions and privacy policy.</string>
    <string name="alert_enter_otp">Please enter OTP</string>
    <string name="alert_invalid_otp">Entered OTP is invalid</string>
    <string name="msg_no_user_data">User data not available</string>
    <string name="alert_we_need_location_permission_allow_from_settings">We need location permission to continue, please allow it from settings.</string>
    <string name="resend">Resend</string>
    <string name="msg_resend_email">Do you want to resend verification email ?</string>

    <string name="alert_select_gender">Please select gender</string>
...
