<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.app.signme.viewModel.ResetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/resetActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.authentication.resetpassword.ResetPasswordActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvResetPassword"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:text="@string/label_reset_password_toolbar_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_dimen_18sp"
            android:fontFamily="@font/sf_pro_text_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_8sdp"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="@+id/tvResetPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvResetPassword" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvResetPassword">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dimen_32dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    style="@style/OutlinedBoxInputLayoutStyle"
                    android:hint="@string/hint_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietPassword"
                        style="@style/InputStyle"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilConfirmPassword"
                    style="@style/OutlinedBoxInputLayoutStyle"
                    android:hint="@string/hint_confirm_password"
                    android:layout_marginBottom="@dimen/dimen_16dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleDrawable="@drawable/password_toggle_selector">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietConfirmPassword"
                        style="@style/InputStyle"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mbtnNext"
                    style="@style/ButtonStyle"
                    android:text="@string/label_reset_password_button"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_16dp"
                    android:textSize="@dimen/text_dimen_14sp"
                    android:fontFamily="@font/sf_pro_text_regular"
                    android:drawablePadding="@dimen/_4sdp"
                    android:text="@string/password_policy"
                    app:drawableStartCompat="@drawable/ic_error_outline" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>